// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack Trace does not print a stack trace for errors when --noStackTrace is given 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       3 failed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /test_error.test.js/i.
"
`;

exports[`Stack Trace does not print a stack trace for matching errors when --noStackTrace is given 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /stack_trace.test.js/i.
"
`;

exports[`Stack Trace does not print a stack trace for runtime errors when --noStackTrace is given 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /runtime_error.test.js/i.
"
`;

exports[`Stack Trace prints a stack trace for errors 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       3 failed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /test_error.test.js/i.
"
`;

exports[`Stack Trace prints a stack trace for errors without message in stack trace 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /stack_trace_without_message.test.js/i.
"
`;

exports[`Stack Trace prints a stack trace for matching errors 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /stack_trace.test.js/i.
"
`;

exports[`Stack Trace prints a stack trace for runtime errors 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /runtime_error.test.js/i.
"
`;

exports[`works with custom matchers 1`] = `
"FAIL __tests__/custom_matcher.test.js
  Custom matcher
    ✓ passes
    ✓ fails
    ✕ preserves error stack

  ● Custom matcher › preserves error stack

    qux

      44 |     const bar = () => baz();
      45 |     const baz = () => {
    > 46 |       throw Error('qux');
      47 |     };
      48 | 
      49 |     expect(() => {
      
      at __tests__/custom_matcher.test.js:46:13
      at __tests__/custom_matcher.test.js:44:23
      at __tests__/custom_matcher.test.js:43:23
      at __tests__/custom_matcher.test.js:50:7
      at __tests__/custom_matcher.test.js:11:18
      at __tests__/custom_matcher.test.js:51:8

"
`;
